<resources>
    <string name="app_name">eDnevnik</string>
    <string name="specijalizantSlika">Slika specijalizanta</string>
    <string name="specijalizantImePrezime">Ime i prezime specijalizanta</string>
    <string name="specijalizantTrenutniOdjel">Trenutni odjel na kojem se specijalizant nalazi</string>
    <string name="napredakRadovi">Stručni rad: 3/6</string>
    <string name="dnevnik">DNEVNIK</string>
    <string name="knjizica">KNJIŽICA</string>
    <string name="dnevnikNaslov">Prvi dan na dermatologiji</string>
    <string name="tipUnosaDnevnik">Aktivnost</string>
    <string name="naslovUnosaDnevnika">Prvi dan na dermatologiji</string>
    <string name="tekstAktivnosti">Lorem ipsum...</string>
    <string name="dodajSpecijalizaciju">Nova specijalizacija</string>
    <string name="specijalizanti">Pretraži specijalizante</string>
    <string name="otvoriSpecijalizaciju">Otvori specijalizaciju</string>
    <string name="vrsta_specijalizacije">Vrsta specijalizacije</string>
    <string name="potvrdi">Potvrdi</string>
    <string name="trenutniNapredak">Trenutni napredak:</string>
    <string name="novaAktivnost">Nova aktivnost</string>
    <string name="labelNaslovUnosaDnevnika">Naslov</string>
    <string name="labelVrstaSpecijalizacije">Vrsta specijalizacije</string>
    <string name="odjava">Odjavi se</string>
    <string name="promjeniLozinku">Promijeni lozinku</string>
    <string name="strucniRad">Stručni rad</string>
    <string name="dnevnaAktivnost">Dnevna \naktivnost</string>
    <string name="slucajBolesnika">Slučaj \nbolesnika</string>
    <string name="strucniRadGumb">Stručni \nrad</string>
    <string name="zahvat">Zahvati</string>
    <string name="kompetencija">Kompetencije</string>
    <string name="dioSpecijalizacije">Dio \nspecijalizacije</string>
    <string name="provjera_znanja">Provjera znanja</string>
    <string name="loginSpecijlizant">Login Specijalizant</string>
    <string name="loginMentor">Login Mentor</string>
    <string name="napredakZahvatti">Zahvati: 3/6</string>
    <string name="napredakKompetencije">Kompetencije: 3/6</string>
    <string name="napredakSlucajBolesnika">Slučajevi bolensika: 3</string>
    <string name="napredakDioSpec">Dijelovi specijlizacije: 2</string>
    <string name="napredakDnevneAktivnosti">Dnevne aktivnosti: 5</string>
    <string name="labelOpisSlucaja">Opis slučaja:</string>
    <string name="dijagnoza">Dijagnoza:</string>
    <string name="labelNaslovRada">Naslov rada:</string>
    <string name="lableObjasvljenU">Objavljen u:</string>
    <string name="labelNazivAktivnosti">Naziv aktivnosti:</string>
    <string name="labelOpisAktivnosti">Opis aktivnosti:</string>
    <string name="labelBrojZahvataNadzor">Broj zahvata sa nadzorom:</string>
    <string name="labelBrojZahvataSamostalno">Broj zahvata samostalno:</string>
    <string name="labelNazivZahvata">Nazuv zahvata:</string>
    <string name="labelBrojZahvata">Broj zahvata:</string>
    <string name="labelStupanj">Stupanj:</string>
    <string name="labelBrojKompetencije">Broj kompetencije?</string>
    <string name="labelDioSpecijalizacije">Dio specijalizacije:</string>
    <string name="labelOcjenaProvjere">Ocjena provjere:</string>
    <string name="labelSadrzajPitanja">Sadržaj pitanja:</string>
    <string name="ispiti">Ispiti</string>
    <string name="labelNazivUstanove">Naziv ustanove:</string>
    <string name="labelProsao">Prošao</string>
    <string name="labelNijeProsao">Nije prošao</string>
    <string name="labelVrijemeIspita">Vrijeme ispita:</string>
    <string name="nijeOdredeno">Nije definirano</string>
    <string name="labelLokacijaIspita">Lokacija:</string>
    <string name="labelOcjena">Ocjena:</string>
    <string name="labelGlavniMentorPotpis">Glavni mentor potpis</string>
    <string name="Email">Email:</string>
    <string name="Lozinka">Lozinka:</string>
    <string name="prijavaSpecijalizant">Specijalizant Prijava</string>
    <string name="mentorPrijava">Mentor Prijava</string>
    <string name="labelZatvoriSpecijalizaciju">Zatvori specijalizaciju</string>
    <string name="labelZavrsnoMisljenje">Završno mišljenje</string>
    <string name="labelOdobrenoZa">Pravna osoba:</string>
    <string name="labelProgramSpecijalizacije">Program specijalizacije:</string>
</resources>