<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/specijalizantSlika"
            android:src="@drawable/person_48px"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/specijalizantSlika"
            />

        <TextView
            android:id="@+id/imePrezime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specijalizantImePrezime"
            android:layout_below="@id/specijalizantSlika"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/updateEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="60dp"
            android:hint="@string/Email"
            android:layout_below="@id/imePrezime">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/updateLozinka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:hint="@string/Lozinka"
            android:layout_below="@id/updateEmail">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/gumbPotvrdiUredivanjeSpecijalizanta"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner"
            android:elevation="10dp"
            android:text="@string/potvrdi"
            android:textSize="16sp" />


    </RelativeLayout>

</LinearLayout>