<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/specijalizantSlika"
            android:src="@drawable/person_48px"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/specijalizantSlika"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specijalizantImePrezime"
            android:layout_below="@id/specijalizantSlika"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/gumbPotvrdiSpecijlizaciju"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner"
            android:elevation="10dp"
            android:text="@string/promjeniLozinku"
            android:textSize="16sp" />


    </RelativeLayout>

</LinearLayout>