<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star_of_life2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_below="@id/star"
            android:layout_centerHorizontal="true"
            style="@style/TextAppearance.AppCompat.Headline"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_centerInParent="true"
            android:hint="@string/Email"
            android:layout_marginTop="200dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLozinka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/Lozinka"
            android:layout_below="@id/inputEmail">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginSpecijalizant"
            android:layout_width="280dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:text="@string/prijavaSpecijalizant"
            android:layout_below="@id/inputLozinka"
            android:background="@drawable/input_background"/>

        <Button
            android:id="@+id/loginMentor"
            android:layout_width="280dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/loginSpecijalizant"
            android:layout_marginTop="12dp"
            android:layout_centerHorizontal="true"
            android:text="@string/mentorPrijava"
            android:textSize="16sp"
            android:layout_below="@id/loginSpecijalizant"
            android:background="@drawable/input_background"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>