<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardCornerRadius="8dp"
    app:cardMaxElevation="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/specijalizantSlika"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/specijalizantSlika"
            android:padding="5dp"
            android:src="@drawable/person_48px" />

        <TextView
            android:id="@+id/spcijalizantIme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/specijalizantSlika"
            android:text="@string/specijalizantImePrezime"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/spcijalizantTrenutniOdjel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/specijalizantSlika"
            android:layout_below="@id/spcijalizantIme"
            android:text="@string/specijalizantTrenutniOdjel"
            android:textColor="@color/black"
            android:textSize="12sp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>