<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/datePicker"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNazivUstanove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/labelNazivUstanove"
            android:layout_below="@id/timePicker">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:layout_width="369dp"
            android:layout_height="59dp"
            android:layout_below="@id/inputNazivUstanove"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/prosao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/labelProsao" />

            <RadioButton
                android:id="@+id/nijeProsao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/labelNijeProsao" />

        </RadioGroup>

        <Button
            android:id="@+id/gumbPotvrdiIspit"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner"
            android:elevation="10dp"
            android:text="@string/potvrdi"
            android:textSize="16sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>