<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/specijalizantSlika"
            android:src="@drawable/person_48px"
            android:padding="4dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="160dp"
            android:layout_marginStart="20dp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/spcijalizantIme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="36dp"
            android:layout_below="@id/specijalizantSlika"
            android:text="@string/specijalizantImePrezime"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/spcijalizantTrenutniOdjel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/spcijalizantIme"
            android:text="@string/specijalizantTrenutniOdjel"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/gumbOtvoriSpecijalizaciju"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="380dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/rounded_corner"
            android:elevation="10dp"
            android:text="@string/otvoriSpecijalizaciju"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>